Switched to old NMSpy for single file compatibility

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,43 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/build/NoMansSky_bhaptics/Analysis-00.toc
+/build/NoMansSky_bhaptics/base_library.zip
+/build/NoMansSky_bhaptics/COLLECT-00.toc
+/build/NoMansSky_bhaptics/EXE-00.toc
+/build/NoMansSky_bhaptics/NoMansSky_bhaptics.exe
+/build/NoMansSky_bhaptics/NoMansSky_bhaptics.pkg
+/build/NoMansSky_bhaptics/PKG-00.toc
+/build/NoMansSky_bhaptics/PYZ-00.pyz
+/build/NoMansSky_bhaptics/PYZ-00.toc
+/build/NoMansSky_bhaptics/warn-NoMansSky_bhaptics.txt
+/build/NoMansSky_bhaptics/xref-NoMansSky_bhaptics.html
+/dist
+/NoMansSky_bhaptics.spec
+/env/Lib/site-packages/altgraph/Dot.py
+/env/Lib/site-packages/altgraph/Graph.py
+/env/Lib/site-packages/altgraph/GraphAlgo.py
+/env/Lib/site-packages/altgraph/GraphStat.py
+/env/Lib/site-packages/altgraph/GraphUtil.py
+/env/Lib/site-packages/altgraph/ObjectGraph.py
+/env/Lib/site-packages/altgraph/__init__.py
+/env/Lib/site-packages/altgraph-0.17.5.dist-info/INSTALLER
+/env/Lib/site-packages/altgraph-0.17.5.dist-info/LICENSE
+/env/Lib/site-packages/altgraph-0.17.5.dist-info/METADATA
+/env/Lib/site-packages/altgraph-0.17.5.dist-info/RECORD
+/env/Lib/site-packages/altgraph-0.17.5.dist-info/top_level.txt
+/env/Lib/site-packages/altgraph-0.17.5.dist-info/WHEEL
+/env/Lib/site-packages/altgraph-0.17.5.dist-info/zip-safe
+/env/Lib/site-packages/dearpygui/dearpygui.py
+/env/Lib/site-packages/dearpygui/demo.py
+/env/Lib/site-packages/dearpygui/experimental.py
+/env/Lib/site-packages/dearpygui/vcruntime140_1.dll
+/env/Lib/site-packages/dearpygui/_dearpygui.pyd
+/env/Lib/site-packages/dearpygui/_dearpygui.pyi
+/env/Lib/site-packages/dearpygui/__init__.py
+/env/Lib/site-packages/dearpygui-2.1.1.dist-info/INSTALLER
+/env/Lib/site-packages/dearpygui-2.1.1.dist-info/licenses/LICENSE
+/env/Lib/site-packages/dearpygui-2.1.1.dist-info/METADATA
+/env/Lib/site-packages/dearpygui-2.1.1.dist-info/RECORD
+/env/Lib/site-packages/dearpygui-2.1.1.dist-info/top_level.txt
+/env/Lib/site-packages/dearpygui-2.1.1.dist-info/WHEEL
